--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <style>
+            body {
+            background: linear-gradient(to top right, #d39a71, #a39c93);
+            }
+        </style>
     </head>
     <body>
         <!-- Navigation-->
@@ -44,14 +50,15 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="bg-dark py-5">
+        <header class="py-5 header-page">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <h1 class="display-4 fw-bolder">PAWCART</h1>
+                    <p class="lead fw-normal text-white-70 mb-0">Your one-stop shop for all your pet needs</p>
                 </div>
             </div>
         </header>
+     
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
