--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                                 <li><hr class="dropdown-divider" /></li>
                                 <li><a class="dropdown-item" href="#!">Popular Items</a></li>
                                 <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#1">Food</a></li>
+                                <li><a class="dropdown-item" href="#1">Hygiene</a></li>
+                                <li><a class="dropdown-item" href="#1">Tools</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#1">Toys</a></li>
+                                <li><a class="dropdown-item" href="#1">Supplements</a></li>
                             </ul>
                         </li>
                     </ul>
