Fixed file organization, added content to hygiene, added subcategories

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">PAWCART</a>
+                <a class="navbar-brand" href="#1">PAWCART</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -38,7 +38,7 @@
                                 <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
                                 <li><hr class="dropdown-divider" /></li>
                                 <li><a class="dropdown-item" href="#1">Food</a></li>
-                                <li><a class="dropdown-item" href="#1">Hygiene</a></li>
+                                <li><a class="dropdown-item" href="pages/categories/hygiene/hygiene.html">Hygiene</a></li>
                                 <li><a class="dropdown-item" href="#1">Tools</a></li>
                                 <li><a class="dropdown-item" href="#1">Toys</a></li>
                                 <li><a class="dropdown-item" href="#1">Supplements</a></li>
