Added search bar

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                 </div>
             </div>
         </nav>
+        <section class="bg-light">
+            <div class="search-container">
+                <input type="text" class="search-input" placeholder="Search...">
+                <div class="text-center"><a class="search-button btn-outline-dark mt-auto" href="#">⌕</a></div>
+            </div>
+        </section>
         <!-- Header-->
         <header class="py-5 header-page">
             <div class="container px-4 px-lg-5 my-5">
@@ -64,7 +70,8 @@
                 </div>
             </div>
         </header>
-     
+        
+
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
