--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 </div>
             </div>
         </nav>
+        <!--Search Bar-->
         <section class="bg-light">
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search...">
