Linked some pages, completed item view page layout

--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
+                        <button class="btn btn-outline-dark mx-1" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </button>
+                            <a class="btn btn-outline-dark mt-auto" href="/pages/login/login.html">
+                            Sign In
+                            </a>
                         </button>
                     </form>
                 </div>
@@ -85,14 +89,22 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <h5 class="fw-bolder">Lavender Bliss Shaving Cream</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"> <b>4.9</b></div>
+                                    </div>
                                     <!-- Product price-->
-                                    $40.00 - $80.00
+                                    Php 1,121.84
                                 </div>
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/pages/item-view.html">See details</a></div>
                             </div>
                         </div>
                     </div>
