--- a/pages/item-view.html
+++ b/pages/item-view.html
@@ -27,7 +27,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
@@ -80,24 +80,52 @@
                             
                               <div class="container">
                                 <div class="row">
-                                  <div class="col-md-6">
+                                  <div class="col-md-6 justify-content-center">
                                     <!-- Product Image -->
                                     <img src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="Apple iPad 9th Generation" class="img-fluid">
                                   </div>
                                   <div class="col-md-6">
                                     <!-- Product Details -->
                                     <h5 class="fw-bold">Lavender Bliss Shaving Cream</h5>
-                                    <p class="text-muted">4.9 <span class="text-dark">(681 Ratings)</span></p>
+                                    <p class="text-muted mb-0">4.9 <span class="text-dark">(681 Ratings)</span></p>
                                     <a class="text-muted" href="#">Visit PawShop</a>
                                     <h3 class="text-danger">Php 1,121.84</small></h3>
-                                    
+                                    <p class="fw-bold mb-0">Brand: 
+                                        <span class="fw-normal">Lavender Bliss</span></p>
+                                    <p class="fw-bold mb-0">Item Form: 
+                                        <span class="fw-normal">Cream</span></p>
+                                    <p class="fw-bold mb-0">Quantity: 
+                                        <span class="fw-normal">8 fl oz (236 ml)</span></p>
+                                    <p class="fw-bold mb-0">Ingredients:
+                                        <span class="fw-normal">Enriched with natural lavender extract, shea butter, and oat extract</span> </p>
+                                    <p class="fw-bold mb-0">Specific Uses: </p>
+                                        <ul class="mb-0">* Soothing and moisturizing for pets with sensitive skin</ul>
+                                        <ul class="mb-0">* Helps prevent skin irritation during grooming</ul>
+                                        <ul class="mb-0">* Leaves a calming lavender scent</ul>
+                                        <ul class="mb-0">* Suitable for dogs and cats of all breeds and sizes</ul>
                                   </div>
                                   <!--Product Gallery-->
-                                  <div class="p-2 pt-0 border-top-0 bg-transparent mt-3 text-center col-md-6">
-
+                                  <div class="p-2 pt-0 border-top-0 bg-transparent mt-3 col-md-6">
+                                    <div class="d-flex justify-content-center">
+                                        <button class="btn btn-sm" type="button">
+                                            <img src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="product_image" style="width: 70px; height: 50px;" />
+                                          </button>
+                                          <button class="btn btn-sm" type="button">
+                                            <img src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="product_image" style="width: 70px; height: 50px;" />
+                                          </button>
+                                          <button class="btn btn-sm" type="button">
+                                            <img src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="product_image" style="width: 70px; height: 50px;" />
+                                        </button>
+                                        <button class="btn btn-sm" type="button">
+                                            <img src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="product_image" style="width: 70px; height: 50px;" />
+                                        </button>
+                                        <button class="btn btn-sm" type="button">
+                                            <img src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="product_image" style="width: 70px; height: 50px;" />
+                                        </button>
+                                      </div>
                                   </div>
                                   <!-- Product actions-->
-                            <div class="p-2 pt-0 border-top-0 bg-transparent mt-3 text-center col-md-6">
+                            <div class="p-2 pt-0 border-top-0 bg-transparent mt-3  col-md-6 justify-content-center">
                                 <span><a class="btn btn-outline-dark mt-auto" href="#">Add to PawCart</a></span>
                                 <span"><a class="btn btn-outline-dark mt-auto" href="#">Purchase</a></span>
                             </div>
