--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
-                            <a class="btn btn-outline-dark mt-auto" href="/pages/login/login.html">
+                            <a class="btn btn-outline-dark mt-auto" href="pages/login/login.html">
                             Sign In
                             </a>
                         </button>
