--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/pages/item-view.html">See details</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pages/item-view.html">See details</a></div>
                             </div>
                         </div>
                     </div>
