Link fixes for github pages

--- a/pages/login/register.html
+++ b/pages/login/register.html
@@ -21,7 +21,7 @@
               <div class="card" style="border-radius: 1rem;">
                 <div class="row g-0">
                   <div class="col-md-6 col-lg-5 d-none d-md-block">
-                    <img src="\images\animal_logo.jpg"
+                    <img src="..\..\images\animal_logo.jpg"
                       alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                   </div>
                   <div class="col-md-6 col-lg-7 d-flex align-items-center">
@@ -31,7 +31,7 @@
       
                         <div class="d-flex align-items-center mb-2 pb-1">
                           <i class="fas fa-cubes fa-2x" style="color: #ff6219;"></i>
-                          <img src="\images\pawcart_logo.jpg" alt="logo" class="img-fluid me-2 mt-1" style="width: 30px; height: 30px;" />
+                          <img src="..\..\images\pawcart_logo.jpg" alt="logo" class="img-fluid me-2 mt-1" style="width: 30px; height: 30px;" />
                           <span class="h1 fw-bold mb-0">PAWCART</span>
                         </div>
                         <h5 class="fw-normal" style="letter-spacing: 1px;">Register</h5>
@@ -60,13 +60,13 @@
                           <p class="small pb-lg-2" style="color: #393f81;">Register With Other Accounts</p>
                           <div class="d-flex justify-content-between">
                             <button class="btn btn-sm" type="button">
-                                <img src="\images\google.png" alt="Google" style="width: 40px; height: 40px;" />
+                                <img src="..\..\images\google.png" alt="Google" style="width: 40px; height: 40px;" />
                               </button>
                               <button class="btn btn-sm" type="button">
-                                <img src="\images\fb.png" alt="Facebook" style="width: 40px; height: 40px;" />
+                                <img src="..\..\images\fb.png" alt="Facebook" style="width: 40px; height: 40px;" />
                               </button>
                               <button class="btn btn-sm" type="button">
-                                <img src="\images\twitter.png" alt="Tinder" style="width: 20px; height: 20px;" />
+                                <img src="..\..\images\twitter.png" alt="Tinder" style="width: 20px; height: 20px;" />
                             </button>
                           </div>
                         </div>
