--- a/pages/payment/payment.html
+++ b/pages/payment/payment.html
@@ -11,7 +11,7 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="../../css/styles.css" rel="stylesheet" />
 
         <style>
             body {
@@ -89,7 +89,7 @@
                                 <small class="text-muted">A Rubber Chew Toy for Pets to Enjoy</small>
                             </div>
                             <div class="d-flex align-items-center">
-                                <img src="\images\toys\rubber_chew_toy.jpg" alt="chewtoy" class="img-thumbnail me-2" style="width: 40px; height: 40px;">
+                                <img src="..\..\images\toys\rubber_chew_toy.jpg" alt="chewtoy" class="img-thumbnail me-2" style="width: 40px; height: 40px;">
                                 <span class="text-muted me-2">X</span>
                                 <div class="form-group m-2">
                                     <select class="form-control" id="exampleFormControlSelect1">
@@ -110,7 +110,7 @@
                                 <small class="text-muted">A Plastic Chew Toy for Pets to Enjoy</small>
                             </div>
                             <div class="d-flex align-items-center">
-                                <img src="\images\toys\plastic_chew_toy.jpg" alt="chewtoy" class="img-thumbnail" style="width: 40px; height: 40px;">
+                                <img src="..\..\images\toys\plastic_chew_toy.jpg" alt="chewtoy" class="img-thumbnail" style="width: 40px; height: 40px;">
                                 <span class="text-muted m-2">X</span>
                                 <div class="form-group m-2">
                                     <select class="form-control" id="exampleFormControlSelect1">
@@ -131,7 +131,7 @@
                                 <small class="text-muted">A Rope Chew Toy for Pets to Enjoy</small>
                             </div>
                             <div class="d-flex align-items-center">
-                                <img src="\images\toys\rope_chew_toys.jpg" alt="chewtoy" class="img-thumbnail" style="width: 40px; height: 40px;">
+                                <img src="..\..\images\toys\rope_chew_toys.jpg" alt="chewtoy" class="img-thumbnail" style="width: 40px; height: 40px;">
                                 <span class="text-muted m-2">X</span>
                                 <div class="form-group m-2">
                                     <select class="form-control" id="exampleFormControlSelect1">
