updated item img

--- a/foodpage.html
+++ b/foodpage.html
@@ -66,7 +66,7 @@
     <!-- Wet Food Item 1 -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\wetfoodall.jpg" alt="Wet Food" />
+            <img class="card-img-top" src="images/wetfoodall.jpg" alt="Wet Food">
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Wet Food Product</h5>
@@ -82,7 +82,7 @@
     <!-- Wet Food Item 2: Beef Wet Food -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\wetfood.jpg" alt="Beef Wet Food" />
+            <img class="card-img-top" src="images/wetfood.jpg" alt="Beef Wet Food" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Beef Wet Food</h5>
@@ -98,7 +98,7 @@
     <!-- Wet Food Item 3: Liver Wet Food -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\liverwetfood.jpg" alt="Liver Wet Food" />
+            <img class="card-img-top" src=images/liverwetfood.jpg alt="Liver Wet Food" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Liver Wet Food</h5>
@@ -114,7 +114,7 @@
     <!-- Wet Food Item 4: Chicken Wet Food -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\cknwetfood.jpg" alt="Chicken Wet Food" />
+            <img class="card-img-top" src=images/cknwetfood.jpg alt="Chicken Wet Food" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Chicken Wet Food</h5>
@@ -133,7 +133,7 @@
     <!-- Dry Food Item 1 -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\dryfoodall.jpg" alt="Dry Food" />
+            <img class="card-img-top" src=images/dryfoodall.jpg alt="Dry Food" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Dry Food Product</h5>
@@ -148,7 +148,7 @@
     <!-- Dry Food Item 2: Freeze Dried Jerky -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\beefjerkydf.jpg" alt="Freeze Dried Jerky" />
+            <img class="card-img-top" src="images/beefjerkydf.jpg" alt="Freeze Dried Jerky" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Freeze Dried Jerky</h5>
@@ -163,7 +163,7 @@
     <!-- Dry Food Item 3: Dried Toppers -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\foodtop.jpg" alt="Dried Toppers" />
+            <img class="card-img-top" src="images/foodtop.jpg" alt="Dried Toppers" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Dried Toppers</h5>
@@ -178,7 +178,7 @@
     <!-- Dry Food Item 4: Smoked Salmon Toppers -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\salmondf.jpg" alt="Smoked Salmon Toppers" />
+            <img class="card-img-top" src="images/foodtopper.jpg" alt="Smoked Salmon Toppers" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Smoked Salmon Toppers</h5>
@@ -198,7 +198,7 @@
     <!-- Treats Item 1: Dog Biscuits -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\milkbne.jpg" alt="Dog Biscuits" />
+            <img class="card-img-top" src="images/milkbne.jpg" alt="Dog Biscuits" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Dog Biscuits</h5>
@@ -213,7 +213,7 @@
     <!-- Treats Item 2: Dried Beef -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\driedbeeftreats.jpg" alt="Dried Beef" />
+            <img class="card-img-top" src="images/driedbeeftreats.jpg" alt="Dried Beef" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Dried Beef</h5>
@@ -228,7 +228,7 @@
     <!-- Treats Item 3: Shank Bone -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\shankbone.jpg" alt="Shank Bone" />
+            <img class="card-img-top" src="images/shankbone.jpg" alt="Shank Bone" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Shank Bone</h5>
@@ -243,7 +243,7 @@
     <!-- Treats Item 4: Denta Stix -->
     <div class="col mb-5">
         <div class="card h-100">
-            <img class="card-img-top" src="C:\Users\Eldreic\OneDrive\Documents\WEBSYS\dentastx.jpg" alt="Denta Stix" />
+            <img class="card-img-top" src="images/dentastx.jpg" alt="Denta Stix" />
             <div class="card-body p-4">
                 <div class="text-center">
                     <h5 class="fw-bolder">Denta Stix</h5>
